# image-wect

./: README.md  dist_test.py  example.py  example_arch.py  expected_wect.r  experiments.py  knn.py  plot_all_directions.r  pyproject.toml  shape_test.py  svm.py  test.py  visualization_ex.py
imagewect/: shape.py  visualization.py  wect.py
pywect/: utilities.py  wect.py
pywect_arch/: utilities.py  wect.py
pywect_arch/datasets/: favorite_tetris.npy  shape_maker.py
