[project]
name = "imagewect"
version = "0.0.1"
authors = [
  { name="Brittany Fasy", email="brittany.fasy@montana.edu" },
  { name="Jesse Cisewski-Kehe", email="jjkehe@wisc.edu" },
  { name="Dhanush Giriyan", email="dhanush.giriyan@gmail.com" },
  { name="Eli Quist", email="quistew@gmail.com" },
]
description = "A package for computing the Weighted Euler Characteristic Transform on images"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/compTAG/image-wect"
"Bug Tracker" = "https://github.com/compTAG/image-wect/issues"